fix word wrap

--- a/contrib/static/chen-chan.css
+++ b/contrib/static/chen-chan.css
@@ -2,9 +2,8 @@ body {
     font-family:monospace;
     max-width:84ch;
     word-wrap:break-word;
-    word-break:break-all;
 }
-dd{margin:1em 0 0 4ch;overflow:auto;}
+dd{margin:1em 0 0 4ch;}
 .memearrows{color:green;}
 pre{margin: 0 0 0 0;}
 table,th,td{border:1px solid gray;}
